@@ -1,0 +1,4 @@
+galpy.potential.Potential.r2deriv
+==================================
+
+.. automethod:: galpy.potential.Potential.r2deriv
