@@ -1,0 +1,4 @@
+galpy.potential.evaluater2derivs
+================================
+
+.. autofunction:: galpy.potential.evaluater2derivs
