@@ -18,6 +18,9 @@ v1.4 (????)
   be schoenrich (for the Schoenrich, Binney, & Dehnen 2010 solar
   motion wrt the LSR).
 
+- Added Potential method r2deriv and function evaluater2derivs to
+  evaluate the second derivative wrt the spherical radius.
+
 - Add warnings/verbose configuration parameter to set level of
   verbosity of non-crucial warnings (like: "Using C implementation to
   integrate orbits").
